# ech

./: .gitignore  go.mod
.github/workflows/: build-packages.yml
ech-gui/: package.json
ech-gui/src/: index.html  main.js  styles.css
ech-gui/src-tauri/: Cargo.toml  tauri.conf.json
ech-gui/src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  process.rs  proxy.rs
