[package]
name = "ech-gui"
version = "1.4.0"
description = "ECH Workers GUI Client - Cross-platform proxy client"
authors = ["jinweizhu"]
edition = "2021"

[lib]
name = "ech_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"
once_cell = "1"
parking_lot = "0.12"
which = "6"
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"
